flux/apps/podinfo/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-redirect
  labels:
    app.kubernetes.io/name: podinfo
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: http
  hostnames:
    - podinfo.stehessel.org
  rules:
    - backendRefs:
        - name: podinfo
          namespace: podinfo
          port: 9898
      filters:
        - type: RequestRedirect
          requestRedirect:
            port: 443
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - podinfo.stehessel.org
  rules:
    - backendRefs:
        - name: podinfo
          namespace: podinfo
          port: 9898
