flux/apps/podinfo/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - podinfo.stehessel.org
  rules:
    - backendRefs:
        - name: podinfo
          namespace: podinfo
          port: 9898
