flux/apps/podinfo/service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/name: podinfo
  name: podinfo
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - podinfo.stehessel.org
  http:
    - route:
        - destination:
            host: podinfo.podinfo.svc.cluster.local
            port:
              number: 9898
